syntax = "proto3";

// option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
option go_package = "github.com/emilyuxtan/grpc-go2/helloworld/helloworld/gen-client";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloAgainRequest) returns (HelloAgainReply) {}
  rpc AnotherSayHello (AnotherHelloRequest) returns (AnotherHelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message HelloAgainRequest {
  string name = 1;
}

message HelloAgainReply {
  string message = 1;
}

message AnotherHelloRequest {
  string name = 1;
}

message AnotherHelloReply {
  string message = 1;
}
